src/server/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/fashion-ai-438801/backend:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: gcp-service-account-key  # Reference the volume
              mountPath: /secrets            # Mount the secret as a file here
              readOnly: true                 # Ensure it's read-only
          resources:
            requests:
              cpu: "250m"    # 0.25 CPU
              memory: "1Gi"  # 1 GiB of memory
            limits:
              cpu: "500m"    # 0.5 CPU
              memory: "2Gi" 
          resources: {}
          readinessProbe:
            httpGet:
              path: /health  # Ensure your app exposes a /health endpoint
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health  # Ensure your app exposes a /health endpoint
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
      - name: gcp-service-account-key
        secret:
          secretName: gcp-service-account-key  # The name of your secret
      restartPolicy: Always
status: {}
