src/server/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/fashion-ai-438801/frontend:latest
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
