src/server/kubernetes/pinecone-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinecone-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pinecone-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: pinecone-service
    spec:
      containers:
        - name: pinecone-service
          image: gcr.io/fashion-ai-438801/pinecone-service:latest
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: "2Gi"  # Minimum memory guaranteed
              cpu: "500m"    # Minimum CPU guaranteed
            limits:
              memory: "6Gi"  # Maximum memory allowed
              cpu: "1"       # Maximum CPU allowed
          volumeMounts:
            - name: gcp-service-account-key  # Reference the volume
              mountPath: /secrets            # Mount the secret as a file here
              readOnly: true                 # Ensure it's read-only
          readinessProbe:
            httpGet:
              path: /health  # Ensure your app exposes a /health endpoint
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health  # Ensure your app exposes a /health endpoint
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: gcp-service-account-key
          secret:
            secretName: gcp-service-account-key  # The name of your secret
      restartPolicy: Always
status: {}
