src/server/kubernetes/vector-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vector-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: vector-service
    spec:
      containers:
        - name: vector-service
          image: gcr.io/fashion-ai-438801/vector-service:latest
          ports:
            - containerPort: 8001
          resources: {}
          readinessProbe:
            httpGet:
              path: /health  # Ensure your app exposes a /health endpoint
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health  # Ensure your app exposes a /health endpoint
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
      restartPolicy: Always
status: {}
