src/server/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-namespace
  labels:
    io.kompose.service: backend
spec:
  type: LoadBalancer
  ports:
    - port: 8000          # External port
      targetPort: 8000  # Port used by the backend container
  selector:
    io.kompose.service: backend
