src/server/kubernetes/vector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-service
  namespace: my-namespace
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: vector-service
status:
  loadBalancer: {}
